added team command

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,7 @@
 Database: "jdbc:mariadb://0.0.0.0:3306/Database"
 Username: ""
 Password: ""
+
+Commands:
+  Team:
+    permission: "gamingteams.commands.team"
