change name/tag/members commands

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -28,3 +28,6 @@ Messages:
   removedTeam: "<green>Your team was succesfully removed.</green>"
   # Placeholder: <name>
   addTeam: "<green>You succesfully added yout Team <name>.</green>"
+  changeName: "<green>You succesfully changes the teams name to <name>.</green>"
+  # Placeholder: <tag>
+  changeTag: "<green>You succesfully changes the teams tag to <tag>.</green>"
