--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,10 +26,13 @@ Messages:
   alreadyInTeam: "<red>Your are already in a team</red>"
   notOwner: "<red>You are not the owner of this your team.</red>"
   removedTeam: "<green>Your team was succesfully removed.</green>"
-  teamNameInUse: ""
+  teamNameInUse: "<red>This team name is already in use</red>"
+  notInATeam: "<red>You are not in a team.!</red>"
   # Placeholder: <name>
   addTeam: "<green>You succesfully added yout Team <name>.</green>"
   changeName: "<green>You succesfully changes the teams name to <name>.</green>"
   invited: "You got invited in the team <name>."
   # Placeholder: <tag>
   changeTag: "<green>You succesfully changes the teams tag to <tag>.</green>"
+  # Placeholder: <player>
+  invitedPlayer: "<green>You invited <player>.</green>"
