fixt member self adding/removing

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -32,6 +32,7 @@ Messages:
   cannotRemovePlayer: "<red>You cannot remove that player from your team!</red>"
   ownerCannotLeave: "<red>The owner of a team cannot leave it, remove the team or give an other Person the owner privilige.</red>"
   removeSelf: "<red>You cannot remove you self from a team!</red>"
+  inviteSelf: "<red>You cannot invitze your self to a team!</red>"
   # Placeholder: <name>
   addTeam: "<green>You succesfully added yout Team <name>.</green>"
   changeName: "<green>You succesfully changes the teams name to <name>.</green>"
