--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-group = ''
-version = '0.0'
+group = 'me.gaminglounge'
+version = '1.0'
 
 repositories {
     mavenCentral()
