--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,11 +16,14 @@ Commands:
       tag: "tag"
       member: "member"
       leave: "leave"
+      join: "join"
+      owner: "owner"
     Arguments:
       name: "name"
       tag: "tag"
       owner: "owner"
       player: "player"
+      teams: "teams"
 
 Messages:
   alreadyInTeam: "<red>Your are already in a team</red>"
@@ -28,11 +31,15 @@ Messages:
   removedTeam: "<green>Your team was succesfully removed.</green>"
   teamNameInUse: "<red>This team name is already in use</red>"
   notInATeam: "<red>You are not in a team!</red>"
-  leaftTeam: "You leaft your team."
+  leaftTeam: "You left your team."
   cannotRemovePlayer: "<red>You cannot remove that player from your team!</red>"
   ownerCannotLeave: "<red>The owner of a team cannot leave it, remove the team or give an other Person the owner privilige.</red>"
   removeSelf: "<red>You cannot remove you self from a team!</red>"
   inviteSelf: "<red>You cannot invitze your self to a team!</red>"
+  nowInYourTeam: "<red>This player is not in your team!</red>"
+  noInvite: "<red>You have no invite to this team.</red>"
+  noTeam: "<red>This team does not exist!</red>"
+  alreadyInvited: "<red>This player was already invited into this team!</red>"
   # Placeholder: <name>
   addTeam: "<green>You succesfully added yout Team <name>.</green>"
   changeName: "<green>You succesfully changes the teams name to <name>.</green>"
@@ -41,3 +48,6 @@ Messages:
   changeTag: "<green>You succesfully changes the teams tag to <tag>.</green>"
   # Placeholder: <player>
   invitedPlayer: "<green>You invited <player>.</green>"
+  playerJoined: "<green>The player <player> joined the team.</green>"
+  playerLeft: "The player <player> left the team."
+  playerRemoved: "The player <player> was removed from the team."
