--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -24,3 +24,7 @@ dependencies:
       load: BEFORE
       required: false
       join-classpath: true
+    PlayerInputAPI:
+      load: BEFORE
+      required: false
+      join-classpath: true
